--- a/Generador de numeros/index.html
+++ b/Generador de numeros/index.html
@@ -51,6 +51,7 @@
         </div>
         <div id="listaNumeros"></div>
         <div id="listaIccid"></div>
+        <div id="listaImei"></div>
     </div>
 </body>
 
