--- a/Generador de numeros/index.html
+++ b/Generador de numeros/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Numeros</title>
-    <script src="generarNumeros.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <style>
@@ -14,7 +13,9 @@
             display: flex;
             margin: 10px;
         }
-        #listaNumeros, #listaIccid{
+
+        #listaNumeros,
+        #listaIccid {
             margin: 10px;
             text-align: center;
         }
@@ -37,14 +38,15 @@
                         </div>
                         <div class="mb-3">
                             <label for="numerosIccid" class="form-label">Numero inicial del ICCID</label>
-                            <input type="number" class="form-control" id="numerosIccid">
+                            <input type="number" class="form-control" id="numerosIccid" disabled>
                         </div>
                         <div class="mb-3">
                             <label for="" class="form-label">Numeros a Generar</label>
                             <input type="number" class="form-control" id="numerosGenerar">
                         </div>
                         <button type="button" class="btn btn-primary btnGenerar" onclick="myFunction()">Generar</button>
-                        <button type="button" class="btn btn-danger btnLimpiar" onclick="myFunctionBorrar()">Limpiar</button>
+                        <button type="button" class="btn btn-danger btnLimpiar"
+                            onclick="myFunctionBorrar()">Limpiar</button>
                     </form>
                 </div>
             </div>
@@ -53,6 +55,7 @@
         <div id="listaIccid"></div>
         <div id="listaImei"></div>
     </div>
+    <script src="generarNumeros.js"></script>
 </body>
 
 </html>
