se suben cambios del ICCID

--- a/Generador de numeros/index.html
+++ b/Generador de numeros/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="numerosIccid" class="form-label">Numero inicial del ICCID</label>
-                            <input type="number" class="form-control" id="numerosIccid">
+                            <input type="number" class="form-control" id="numerosIccid" disabled>
                         </div>
                         <div class="mb-3">
                             <label for="" class="form-label">Numeros a Generar</label>
